--- a/SalesforceDataloader/.classpath
+++ b/SalesforceDataloader/.classpath
@@ -13,17 +13,17 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/KVP/Documents/NetBeansProjects/SalesforceBulkAPIDemo/SalesforceBulkAPIDemo/lib/opencsv-2.1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/KVP/Documents/NetBeansProjects/SalesforceBulkAPIDemo/SalesforceBulkAPIDemo/lib/partner-bulk-loader.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/KVP/Documents/NetBeansProjects/SalesforceBulkAPIDemo/SalesforceBulkAPIDemo/lib/wsc-17_0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/KVP/Downloads/super-csv-distribution-2.1.0-bin/super-csv/super-csv-2.1.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
